[package]
name = "todo_task"
version = "0.1.0"
edition = "2021"
authors = ["Samson Oluwafemi Olawole"]
description = "A CLI tool for task management"
license = "None"
repository = "https://github.com/Sam-Crane/todo_task.git"



[dependencies]


anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
printpdf = "0.3.1"
csv = "1.1"